# ml_learning

./: .gitignore  Bank Cchurn Submission.ipynb  Bank Churn Submission DecisionTree.ipynb  Bank Churn Submission.ipynb  Credit_EDA.ipynb  EDA.Початок.ipynb  HW 1.2 Credit EDA.ipynb  HW 2.1 Building a linear regression on one attribute.ipynb  HW 2.1 Functions and Derivatives.ipynb  HW 2.1 Linear Regression from Multiple Variables.ipynb  HW 2.1 Matrices and Vectors (Introduction to Linear Algebra).ipynb  HW 2.1 Statistical hypothesis testing.ipynb  HW 2.1. Feature analysis for linear regression.ipynb  HW 2.2 Logistic Regression with scikit learn.ipynb  HW 2.2 Mathematical formulation of logistic regression.ipynb  HW 2.2 Polynomial features. Pipelines.ipynb  HW 2.2 Unbalanced multiclass classification.ipynb  HW 2.3 Decision Trees.ipynb  HW 2.4 Boosting algorithms.ipynb  HW 2.4 kNN. Cross-validation and hyperparameter tuning.ipynb  HW 2.5 Time Series Analysis.ipynb  HW_1_1_Основи_статистики.ipynb  pyproject.toml
src/: process_bank_churn.py  utils.py
