[project]
name = "ml-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
]
