[project]
name = "ml-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.5",
    "hyperopt>=0.2.7",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "joblib>=1.4.2",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.0",
    "opendatasets>=0.1.22",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
    "xgboost>=2.1.4",
]
